# CG-HW5

./: .clang-format  CMakeLists.txt  README.md  main.cpp
